--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -2,18 +2,18 @@ name: Create Tag on package.json update
 
 on:
   push:
-    branches:    
+    branches:
       - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         token: '${{ secrets.GH_AUTH_TOKEN }}'
         fetch-depth: 0
-    - uses: butlerlogic/action-autotag@master
+    - uses: butlerlogic/action-autotag@stable
       with:
         GITHUB_TOKEN: "${{ secrets.GH_AUTH_TOKEN }}"
         tag_prefix: "v"
