--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GH_AUTH_TOKEN }}'
+        token: '${{ secrets.GITHUB_TOKEN }}'
         fetch-depth: 0
     - uses: butlerlogic/action-autotag@stable
       with:
-        GITHUB_TOKEN: "${{ secrets.GH_AUTH_TOKEN }}"
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         tag_prefix: "v"
