--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -18,5 +18,5 @@ jobs:
         fetch-depth: 0
     - uses: butlerlogic/action-autotag@stable
       with:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        # GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         tag_prefix: "v"
