--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -13,10 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
-        fetch-depth: 0
     - uses: butlerlogic/action-autotag@stable
-      with:
-        # GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         tag_prefix: "v"
